# claude-sync

./: .gitignore  Cargo.toml  README.md
.claude/agents/: frontend-engineer.md  qa-engineer.md  rust-engineer.md
.claude/skills/claude-sync-orchestrator/: SKILL.md
.claude/skills/frontend-dev/: SKILL.md
.claude/skills/qa-verify/: SKILL.md
.claude/skills/rust-dev/: SKILL.md
.github/workflows/: release.yml
crates/claude-sync-cli/: Cargo.toml
crates/claude-sync-cli/src/: main.rs
crates/claude-sync-cli/src/commands/: config_cmd.rs  diff.rs  doctor.rs  init.rs  mod.rs  pull.rs  push.rs  restore.rs  secret.rs  skill.rs  status.rs
crates/claude-sync-core/: Cargo.toml
crates/claude-sync-core/src/: config.rs  discovery.rs  error.rs  git_ops.rs  lib.rs  manifest.rs  merge.rs  platform.rs  secret.rs  snapshot.rs
crates/claude-sync-gui/: Cargo.toml  tauri.conf.json
crates/claude-sync-gui/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
crates/claude-sync-gui/frontend/src/: App.tsx
crates/claude-sync-gui/frontend/src/components/: Dashboard.tsx  PluginManager.tsx  SecretManager.tsx  SetupWizard.tsx  SkillManager.tsx
crates/claude-sync-gui/frontend/src/lib/: backend.ts  types.ts
crates/claude-sync-gui/frontend/src/styles/: globals.css
crates/claude-sync-gui/icons/: icon.icns
crates/claude-sync-gui/src/: lib.rs  main.rs
