[workspace]
members = ["crates/claude-sync-core", "crates/claude-sync-cli", "crates/claude-sync-gui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/user/claude-sync"
description = "Sync Claude Code configuration across devices via GitHub"

[workspace.dependencies]
claude-sync-core = { path = "crates/claude-sync-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# git2 대신 시스템 git 명령어를 사용 (Windows C 빌드 의존성 회피)
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
sha2 = "0.10"
regex = "1"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
dirs = "6"
hostname = "0.4"
