[package]
name = "claude-sync-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Claude Code configuration sync"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
# 시스템 git CLI 사용 (std::process::Command)
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sha2.workspace = true
regex.workspace = true
glob.workspace = true
chrono.workspace = true
tracing.workspace = true
dirs.workspace = true
hostname.workspace = true
