[package]
name = "claude-sync-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GUI desktop app for Claude Code configuration sync"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
claude-sync-core.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
